--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html,
 body,
 #root {
   min-height: 100% !important;
@@ -32,4 +33,57 @@ body,
 
 .selected-vertical {
   outline: 5px double orange;
+}
+
+/* Wave animation */
+
+.wave {
+  background: rgba(231, 23, 204, 0.25);
+  border-radius: 1000% 1000% 0 0;
+  position: fixed;
+  width: 200%;
+  height: 20vh;
+  animation: wave 10s -3s linear infinite;
+  transform: translate3d(0, 0, 0);
+  opacity: 0.8;
+  bottom: 0;
+  left: 0;
+  z-index: -10;
+}
+
+.wave:nth-of-type(2) {
+  background: rgba(197, 144, 190, 0.582);
+  bottom: -1.25em;
+  animation: wave 18s linear reverse infinite;
+  opacity: 0.8;
+}
+
+.wave:nth-of-type(3) {
+  background: rgba(130, 7, 155, 0.25);
+  bottom: -2.5em;
+  animation: wave 20s -1s reverse infinite;
+  opacity: 0.9;
+}
+
+@keyframes wave {
+  2% {
+    transform: translateX(1);
+  }
+
+  25% {
+    transform: translateX(-25%);
+  }
+
+  50% {
+    transform: translateX(-50%);
+    height: 16em;
+  }
+
+  75% {
+    transform: translateX(-25%);
+  }
+
+  100% {
+    transform: translateX(1);
+  }
 }
