--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,300;10..48,400;10..48,600&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Bricolage Grotesque', sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-image: url("https://w0.peakpx.com/wallpaper/427/48/HD-wallpaper-purple-haze-world-reflects-water-alien.jpg");
+  background-color: antiquewhite;
+  background-image: url("./assets/body-background.jpeg");
+  background-position: center;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
@@ -38,7 +43,7 @@ body,
 /* Wave animation */
 
 .wave {
-  background: rgba(231, 23, 204, 0.25);
+  background: rgba(72, 196, 90, 0.25);
   border-radius: 1000% 1000% 0 0;
   position: fixed;
   width: 200%;
@@ -52,14 +57,14 @@ body,
 }
 
 .wave:nth-of-type(2) {
-  background: rgba(197, 144, 190, 0.582);
+  background: rgba(144, 182, 197, 0.582);
   bottom: -1.25em;
   animation: wave 18s linear reverse infinite;
   opacity: 0.8;
 }
 
 .wave:nth-of-type(3) {
-  background: rgba(130, 7, 155, 0.25);
+  background: rgba(7, 155, 118, 0.25);
   bottom: -2.5em;
   animation: wave 20s -1s reverse infinite;
   opacity: 0.9;
@@ -85,5 +90,41 @@ body,
 
   100% {
     transform: translateX(1);
+  }
+}
+
+/* Styles for border image */
+
+.tree-border {
+  border: 40px solid;
+  border-image: url('./assets/border.png') 45 / 40px / 25px round;
+}
+
+.box-border {
+  border: 30px solid;
+  border-image: url('./assets/box.jpg') 9 / 30px / 0px round;
+}
+
+.light-box-border {
+  border: 10px solid transparent;
+  border-image: url('./assets/box.jpg') 9 / 10px / 0px round;
+  border-radius: 8px;
+}
+
+/* Arrow */
+
+#left-triangle {
+  width: 0;
+  height: 0;
+  border-right: 10px solid green;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+}
+
+@media (min-width:640px) {
+  #left-triangle {
+    border-right: 20px solid green;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
   }
 }
