style: Minimize arrow width

--- a/src/index.css
+++ b/src/index.css
@@ -134,8 +134,10 @@ body,
 
 @media (min-width:640px) {
   #left-triangle {
-    border-right: 20px solid green;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
+    border-right: 10px solid green;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
   }
 }
+
+/* General purpose */
